2012-01-02 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tune/tuneup.c (tune_fac_ui): Compute FAC_DSC before FAC_ODD.

2011-12-31  Torbjorn Granlund  <tege@gmplib.org>

	* Makefile.am (fac_ui.h): Put file in top-level dir, not in mpz.

2011-12-31 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tune/Makefile.am (fac_ui.c): New target.
	(nodist_tuneup_SOURCES,CLEANFILES): Add fac_ui.c.
	* tune/tuneup.c (mpz_fac_ui_tune): Declare prototype.
	(fac_odd_threshold,fac_dsc_threshold): New global variables.
	(speed_mpz_fac_ui_tune,tune_fac_ui): New functions.
	(all): Call tune_fac_ui.
	* gmp-impl.h (FAC_ODD_THRESHOLD,FAC_DSC_THRESHOLD):
	New thresholds: default values, and setup for tuning.
	(FAC_DSC_THRESHOLD_LIMIT): Define (when tuning).
	* mpz/fac_ui.h (FAC_ODD_THRESHOLD,FAC_DSC_THRESHOLD):
	Default values removed.

2011-12-30  Torbjorn Granlund  <tege@gmplib.org>

	* mpz/hamdist.c: Fix typo in a return statement.

	* mpn/generic/powm_sec.c (SQR_BASECASE_MAX): Set safely from
	SQR_TOOM2_THRESHOLD.

2011-12-17  Torbjorn Granlund  <tege@gmplib.org>

	* tests/mpz/t-perfpow.c: Decrease default # of tests.

2011-12-16  Torbjorn Granlund  <tege@gmplib.org>

	* tests/refmpn.c (AORS_1): Fix typo in variable type.

2011-12-10  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/sbpi1_bdiv_q.c: Delay quotient limb stores in order to
	allow quotient and dividend to completely overlap.
	* mpn/generic/sbpi1_bdiv_qr.c: Likewise.

2011-12-10 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpz/fac_ui.c: fac_bc_ui inlined in fac_ui.

2011-12-08  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/generic/powm_sec.c: Handle fat binaries better.

	* mpz/fac_ui.c (mpz_bc_fac_1): Fix typo in allocation size.

	* mpn/x86/fat/com.c: New file.

	* mpn/x86_64/pentium4/aors_n.asm: Make it actually work for DOS64.
	* mpn/x86_64/pentium4/rsh1aors_n.asm: Conditionalise jump on DOS64
	to avoid overhead for standard ABIs.

	* mpn/x86_64/gcd_1.asm: Support DOS64.

2011-12-07  Torbjorn Granlund  <tege@gmplib.org>
